Added method for fixing existed tree